--- a/views/admin/list.pug
+++ b/views/admin/list.pug
@@ -11,7 +11,9 @@ block content
 						.pull-right
 							button.mdc-button.add-button
 								i.material-icons add_circle
-					
+								
+					//pre= JSON.stringify(admin.getOptions(),"",2)
+
 				.page-content
 					section
 						.input-group
