--- a/views/admin/create.pug
+++ b/views/admin/create.pug
@@ -1,24 +1,30 @@
 extends ../wrapper
 
 block content
-
+	- let back = mountpoint + '/' + admin.name;
+	if admin.options.parent
+		- back = mountpoint + '/' + admin.options.parent.table + '/' + belongsTo
+	
 	.admin-form-container
 		.admin-form.clear-fix.mdc-elevation--z1
-			.admin(data-jsclass="adminController" data-mountpoint= mountpoint data-model= admin.name data-redirect= mountpoint + '/' + admin.name)
+			.admin(data-jsclass="adminController" data-mountpoint= mountpoint data-model= admin.name data-redirect= back)
 			
 				.page-header
 					h2
-						a(href= mountpoint + '/' + admin.name)
+						a(href= back)
 							i.material-icons arrow_back_ios
 						= admin.name + ' table create row'
 					
+					//pre= JSON.stringify(admin.options,"",2)
+
 				.page-content
 					form.form-validation(data-jsclass="formValidator" data-submitter="#submitter")
 						if fk
 							input(type="hidden" name= admin.name + '['+fk+']' value= belongsTo)
 						section
 							for property in admin.options.editColumns
-								!= admin.getColumn(property).getForm(row)
+								if property !== fk
+									!= admin.getColumn(property).getForm(row)
 
 						section.form-group.pull-right.button-bar
 							a.mdc-button(href= mountpoint + '/' + admin.name) Cancel
