--- a/views/admin/view.pug
+++ b/views/admin/view.pug
@@ -17,7 +17,7 @@ block content
 							button.mdc-button.add-button
 								i.material-icons add_circle
 					
-					//pre= JSON.stringify(admin.options,"",2)
+					pre= JSON.stringify(admin.getOptions(),"",2)
 
 				.page-content
 					table
@@ -44,7 +44,7 @@ block content
 						for property in admin.options.viewColumns
 							tr
 								td= property
-								td= row[property]
+								td= admin.getColumn(property).getValue(row)
 								
 					for assoc in admin.associations
 						if assoc.relationship === 'HasMany' || assoc.relationship === 'BelongsToMany'
@@ -59,5 +59,9 @@ block content
 										tr
 											for property in adminTables[assoc.target].options.listColumns
 												td
-													a(href= mountpoint + '/' + assoc.target + '/' + rel.id)= rel[property]
+													if rel.ADMIN
+														a(href= mountpoint + '/' + rel.ADMIN.through + '/' + rel.ADMIN.id)= rel[property]
+
+													else
+														a(href= mountpoint + '/' + assoc.target + '/' + rel.id)= rel[property]
 						
