--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -271,6 +271,11 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 			td
 				border-bottom:thin solid #dddddd
 
+.flextable-row
+	&:hover
+		cursor: pointer
+		background-color: #eee
+		
 .flextable-header
 	text-align:left
 
