--- a/views/admin/create.pug
+++ b/views/admin/create.pug
@@ -3,7 +3,7 @@ extends ../wrapper
 block content
 	- let back = mountpoint + '/' + admin.name;
 	if admin.options.parent
-		- back = mountpoint + '/' + admin.options.parent.table + '/' + belongsTo
+		//- back = mountpoint + '/' + admin.options.parent.table + '/' + belongsTo
 	
 	.admin-form-container
 		.admin-form.clear-fix.mdc-elevation--z1
