--- a/views/admin/view.pug
+++ b/views/admin/view.pug
@@ -17,7 +17,7 @@ block content
 							button.mdc-button.add-button
 								i.material-icons add_circle
 					
-					pre= JSON.stringify(admin.getOptions(),"",2)
+					//pre= JSON.stringify(admin.getOptions(),"",2)
 
 				.page-content
 					table
