--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -275,7 +275,7 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 	&:hover
 		cursor: pointer
 		background-color: #eee
-		
+
 .flextable-header
 	text-align:left
 
@@ -323,3 +323,14 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 		text-transform: uppercase
 	label
 		text-transform: uppercase
+
+	.uploadable-input
+		margin: 20px
+		margin-left: 10px
+
+	.uploadable-preview
+		img
+			height:36px
+			margin:10px
+	.none
+		display: none
