--- a/views/admin/type-input.pug
+++ b/views/admin/type-input.pug
@@ -1,6 +1,6 @@
 section.form-group
 	.mdc-text-field.mdc-text-field--with-trailing-icon
-		input.mdc-text-field__input(name= name value= value data-validate= validate data-match= match data-min= min data-max= max data-mask= mask data-length= length data-min-length= minLength data-max-length= maxLength data-unique-endpoint= uniqueEndpoint data-lookup-endpoint= lookupEndpoint)
+		input.mdc-text-field__input(name= name value= value)
 		label.mdc-floating-label= options.label
 		.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 		.mdc-line-ripple
