--- a/views/admin/type-textarea.pug
+++ b/views/admin/type-textarea.pug
@@ -1,6 +1,6 @@
 section.form-group
 	.mdc-text-field.mdc-text-field--with-trailing-icon.mdc-text-field--textarea
-		textarea.mdc-text-field__input(name= name rows= rows cols= cols data-validate= validate data-mask= mask data-length= length data-min-length= minLength data-max-length= maxLength)= value
+		textarea.mdc-text-field__input(name= name rows= options.rows cols= options.cols)= value
 		.mdc-notched-outline
 			.mdc-notched-outline__leading
 			.mdc-notched-outline__notch
