--- a/views/admin/type-image.pug
+++ b/views/admin/type-image.pug
@@ -4,7 +4,7 @@ section.form-group
 			if thumb
 				img(src= thumb)
 		input.mdc-text-field__input(type="hidden" data-name= columnName name= name value= value)
-		input.mdc-text-field__input(type="hidden" data-name= columnName + '-upload' name= uploadName value= value)
+		input.mdc-text-field__input(type="hidden" data-name= columnName + '-upload' name= uploadName)
 		input(type="hidden" data-name=columnName + '-width' name= widthName)
 		input(type="hidden" data-name=columnName + '-height' name= heightName)
 		input.uploadable-input(data-column-name= columnName data-jsclass="uploadableImage" data-target='[data-name=' + columnName + '-upload]' data-max-width=options.maxWidth data-max-height=options.maxHeight type="file" name= name + '-uploadable' accept= options.accepts)
