--- a/views/admin/type-related.pug
+++ b/views/admin/type-related.pug
@@ -2,6 +2,7 @@ section.form-group
 	.mdc-select.full-width
 		i.mdc-select__dropdown-icon
 		select.mdc-select__native-control(name= name)
+			option(value="") ---
 			for row in related
 				if row.id == value
 					option(value= row.id selected)= row.description
