--- a/views/users/password-reset.pug
+++ b/views/users/password-reset.pug
@@ -10,7 +10,7 @@ block content
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
-						input.mdc-text-field__input(name="email" data-validate="required,email")
+						input.mdc-text-field__input(name="email" data-validate= validators.email)
 						label.mdc-floating-label Email Address
 						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 						.mdc-line-ripple
