--- a/views/users/email-change.pug
+++ b/views/users/email-change.pug
@@ -11,7 +11,7 @@ block content
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
-						input.mdc-text-field__input(name="email" data-validate="required,email" data-unique-endpoint="/api/users/is-unique-email")
+						input.mdc-text-field__input(name="email" data-validate= validators.email data-unique-endpoint="/api/users/is-unique-email")
 						label.mdc-floating-label New Email Address
 						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 						.mdc-line-ripple
@@ -19,7 +19,7 @@ block content
 						.validation-help.mdc-text-field-helper-text--persistent
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
-						input.mdc-text-field__input(name="confirm-email" data-validate="required,email" data-match="input[name='email']")
+						input.mdc-text-field__input(name="confirm-email" data-validate= validators.email data-match="input[name='email']")
 						label.mdc-floating-label Confirm New Email Address
 						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 						.mdc-line-ripple
