--- a/views/users/password-set.pug
+++ b/views/users/password-set.pug
@@ -16,7 +16,7 @@ block content
 						
 					section.form-group
 						.mdc-text-field.mdc-text-field--with-trailing-icon
-							input.mdc-text-field__input(type="password" name="password" data-validate="required,password" data-min-length="8")
+							input.mdc-text-field__input(type="password" name="password" data-validate= {isPassword:true} data-min-length="8")
 							label.mdc-floating-label New Password
 							.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 							.mdc-line-ripple
@@ -25,7 +25,7 @@ block content
 							
 					section.form-group
 						.mdc-text-field.mdc-text-field--with-trailing-icon
-							input.mdc-text-field__input(type="password" name="confirm-password" data-validate="required,password" data-match="input[name='password']" placeholder="confirm password")
+							input.mdc-text-field__input(type="password" name="confirm-password" data-validate= {isPassword:true} data-match="input[name='password']" placeholder="confirm password")
 							label.mdc-floating-label Confirm New Password
 							.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 							.mdc-line-ripple
