admin boolean UI

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -25,6 +25,7 @@ $darker-accent: #95c200;
 @import "@material/elevation/mdc-elevation";
 @import "@material/fab/mdc-fab";
 @import "@material/select/mdc-select";
+@import "@material/switch/mdc-switch";
 @import "@material/linear-progress/mdc-linear-progress";
 
 $fa-font-path: "../../node_modules/@fortawesome/fontawesome-free/webfonts";
