--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -331,6 +331,8 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 			font-size: 1em
 		.form-group
 			position:relative
+		.mdc-switch
+			margin: 1em
 	.admin-form-footer
 		padding-top: 1em
 		text-transform: uppercase
