--- a/views/admin/type-input.pug
+++ b/views/admin/type-input.pug
@@ -1,4 +1,4 @@
 .form-group
-	input(type="text" name= name value= value data-validate= JSON.stringify(options.validate))
+	input(type="text" name= name value= value data-validate= options.validate)
 	.input-ok-indicator.material-icons check_circle
-	.validation-help some text
+	.validation-help
