--- a/views/admin/type-textarea.pug
+++ b/views/admin/type-textarea.pug
@@ -1,4 +1,4 @@
 form-group
-	textarea(name= name rows= options.rows cols= options.cols)= value
+	textarea(name= name rows= options.rows cols= options.cols data-validate= options.validate)= value
 	.input-ok-indicator.material-icons check_circle
 	.validation-help.mdc-text-field-helper-text--persistent
