implement search on admin list view

--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -345,7 +345,7 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 	.uploadable-preview
 		display:inline-block
 		img
-			height:100%
-			width:auto
 			margin-right:10px
 			vertical-align:middle
+	.uploadable-form
+		display:inline-block
