--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -168,6 +168,13 @@ h2
 	.hidden-dont-have-subscription
 		display:none!important
 
+.is-admin
+	.hidden-admin
+		display:none!important
+.not-admin
+	.hidden-not-admin
+		display:none!important
+
 // make autofill less horrifyingly ugly
 
 input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focus,textarea:-webkit-autofill,textarea:-webkit-autofill:hover,textarea:-webkit-autofill:focus,select:-webkit-autofill,select:-webkit-autofill:hover,select:-webkit-autofill:focus
