--- a/views/components/drawer.pug
+++ b/views/components/drawer.pug
@@ -10,14 +10,17 @@ aside#nav-drawer.drawer-top.mdc-drawer.mdc-drawer--dismissible
 					span.mdc-list-item__text Login
 
 			.hidden-logged-out
-				div#drawer-personalized(data-hijax="true")
-					if user
-						a.nav-item.mdc-list-item(href="/users/home")
-							i.material-icons.mdc-list-item__graphic person
-							span.mdc-list-item__text= user.username
+				a.nav-item.mdc-list-item(href="/users/home")
+					i.material-icons.mdc-list-item__graphic person
+					span.mdc-list-item__text User Home
 				a.nav-item.mdc-list-item(href="/users/settings")
 					i.material-icons.mdc-list-item__graphic settings_applications
 					span.mdc-list-item__text Settings
 				a.nav-item.mdc-list-item(href="#" data-jsclass="ajaxButton" data-confirm="#confirm-dialog" data-confirm-prompt="Logout?" data-endpoint='/api/users/logout' data-method="DELETE" data-no-hijax="true" data-redirect="/users/login" ) Logout
-
+			
+			.hidden-not-admin
+				hr.mdc-list-divider
+				a.nav-item.mdc-list-item(href="/admin/menu")
+					i.material-icons.mdc-list-item__graphic supervisor_account
+					span.mdc-list-item__text Site Admin
 .mdc-drawer-scrim
