per table/user role ACL permissions

--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -161,11 +161,11 @@ h2
 	.hidden-logged-out
 		display:none!important
 
-.have-subscription
-	.hidden-have-subscription
+.is-subscriber
+	.hidden-is-subscriber
 		display:none!important
-.dont-have-subscription
-	.hidden-dont-have-subscription
+.not-subscriber
+	.hidden-not-subscriber
 		display:none!important
 
 .is-admin
