--- a/views/index.pug
+++ b/views/index.pug
@@ -5,9 +5,9 @@ block content
     p Home
     
     .hidden-logged-out
-      .hidden-dont-have-subscription
+      .hidden-not-subscriber
         p Hi subscriber!
-      .hidden-have-subscription
+      .hidden-is-subscriber
         p Hi, why not subscribe now!
 
 block fab
