--- a/views/users/home.pug
+++ b/views/users/home.pug
@@ -13,7 +13,7 @@ block content
 		if !user.validated
 			p.alert Please check your email to confirm and validate your email address. If you did not recieve the email <a class="mdc-theme--secondary" href="/users/email-change">click here</a> to resend.
 				
-		.hidden-dont-have-subscription
+		.hidden-not-subscriber
 			p Hi subscriber!
-		.hidden-have-subscription
+		.hidden-is-subscriber
 			p Hi, why not <a href="/users/subscription">subscribe now</a>!
