profile photo (example user form using admin column handler)

--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -50,6 +50,10 @@ h1,h2,h3,h4
 		margin-left:2em
 		margin-right:2em
 
+.profile-photo
+	max-height: 150px
+	border-radius: 10px
+
 // color for active items such a nav bar notifications icon
 .highlight
 	color:$darker-accent
