--- a/views/users/settings.pug
+++ b/views/users/settings.pug
@@ -12,6 +12,8 @@ block content
 	.page-content
 
 		nav.mdc-list
+			
+			a.mdc-list-item(href="/users/photo") Profile Photo
 
 			a.mdc-list-item(href="/users/tokens") Login History
 
