--- a/views/admin/create.pug
+++ b/views/admin/create.pug
@@ -5,9 +5,9 @@ block content
 	if admin.options.parent
 		//- back = mountpoint + '/' + admin.options.parent.table + '/' + belongsTo
 	
-	.admin-form-container
-		.admin-form.clear-fix.mdc-elevation--z1
-			.admin(data-jsclass="adminController" data-mountpoint= mountpoint data-model= admin.name data-redirect= back)
+	.admin-container
+		.admin.clear-fix.mdc-elevation--z1
+			div(data-jsclass="adminController" data-mountpoint= mountpoint data-model= admin.name data-redirect= back)
 			
 				.page-header
 					h2
@@ -18,19 +18,20 @@ block content
 					//pre= JSON.stringify(admin.options,"",2)
 
 				.page-content
-					form.form-validation(data-jsclass="formValidator" data-submitter="#submitter")
-						if fk
-							input(type="hidden" name= admin.name + '['+fk+']' value= belongsTo)
-						table
-							for property in admin.options.editColumns
-								if property !== fk
-									tr
-										td.label= admin.getColumn(property).options.label
-										td!= admin.getColumn(property).getForm(row)
+					.admin-form
+						form.form-validation(data-jsclass="formValidator" data-submitter="#submitter")
+							if fk
+								input(type="hidden" name= admin.name + '['+fk+']' value= belongsTo)
+							table
+								for property in admin.options.editColumns
+									if property !== fk
+										tr
+											td.label= admin.getColumn(property).options.label
+											td!= admin.getColumn(property).getForm(row)
 
-						section.form-group.pull-right.button-bar
-							a.mdc-button(href= mountpoint + '/' + admin.name) Cancel
-							button#submitter.mdc-button.mdc-button--raised(disabled).primary-button
-								span.mdc-button__label Save
-							
-					.ajax-errors
+							section.form-group.pull-right.button-bar
+								a.mdc-button(href= mountpoint + '/' + admin.name) Cancel
+								button#submitter.mdc-button.mdc-button--raised(disabled).primary-button
+									span.mdc-button__label Save
+								
+						.ajax-errors
