--- a/views/admin/menu.pug
+++ b/views/admin/menu.pug
@@ -1,8 +1,8 @@
 extends ../wrapper
 
 block content
-	.admin-form-container
-		.admin-form.clear-fix.mdc-elevation--z1
+	.admin-container
+		.admin.clear-fix.mdc-elevation--z1
 			.page-header
 				h2 Site Admin
 			
